# quantum-cart

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PUBLIC_RELEASE_CHECKLIST.md  README.md  ROADMAP.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  security.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  docker-compose.yml
backend/k8s/: config.example.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  service.yaml
backend/migrations/: init.sql
backend/src/: lib.rs  main.rs
backend/src/application/: command_bus.rs  event_bus.rs  mod.rs  query_bus.rs  saga_orchestrator.rs
backend/src/domains/: mod.rs
backend/src/domains/audit/: mod.rs
backend/src/domains/cart/: mod.rs
backend/src/domains/identity/: mod.rs
backend/src/domains/order/: errors.rs  events.rs  handlers.rs  mod.rs  models.rs  repository.rs  service.rs
backend/src/domains/order/commands/: checkout.rs  mod.rs
backend/src/domains/order/queries/: mod.rs
backend/src/domains/pricing/: mod.rs  models.rs  quantum.rs  repository.rs  service.rs
backend/src/infrastructure/persistence/: postgres.rs
backend/src/shared/: config.rs  errors.rs  middleware.rs  mod.rs  models.rs  telemetry.rs
